--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "D. Haynes Marketplace",
+    "name": "Partsplace06 Auto Parts",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
